return animation, no-select fix

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -3,8 +3,8 @@
 <!--  <button (click)="deleteTreeNode()">Delete</button>-->
 <!--</header>-->
 <div class="main-container">
-  <div class="tree-container">
-    <app-my-node-tree class="no-select"></app-my-node-tree>
+  <div class="tree-container no-select">
+    <app-my-node-tree></app-my-node-tree>
   </div>
   <div class="content-container">
     {{ selectedNode()?.content ?? 'Select a node to see its content' }}
