--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,7 +1,3 @@
-<!--<header>-->
-<!--  <button (click)="addTreeNode()">Add</button>-->
-<!--  <button (click)="deleteTreeNode()">Delete</button>-->
-<!--</header>-->
 <div class="main-container">
   <div class="tree-container no-select">
     <app-my-node-tree></app-my-node-tree>
@@ -9,4 +5,9 @@
   <div class="content-container">
     {{ selectedNode()?.content ?? 'Select a node to see its content' }}
   </div>
+  <footer>
+    <button class="j-common-button" (click)="addTreeNode()">Add</button>
+    <button class="j-common-button border-only" (click)="editTreeNode()">Edit</button>
+    <button class="j-common-button red" (click)="deleteTreeNode()">Delete</button>
+  </footer>
 </div>
