--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -1,14 +1,20 @@
-header {
-  background-color: #cccccc;
-  padding: 8px;
-}
-
 .main-container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: grid;
   grid-template-columns: minmax(100px, 300px) 1fr;
+  grid-template-rows: 1fr 50px;
   background-color: cyan;
+
+  footer {
+    grid-column: 1 / -1;
+    display: flex;
+    align-items: center;
+    gap: 32px;
+    background-color: #cccccc;
+    padding: 8px;
+    max-height: 50px;
+  }
 
   .tree-container {
     background-color: lightpink;
