--- a/frontend/src/app/components/my-node/my-node.html
+++ b/frontend/src/app/components/my-node/my-node.html
@@ -1,3 +1,3 @@
-<div class="parent-container" [ngClass]="{ overlapped: isOverlapped, selected: isSelected, dragging }" (mousedown)="onClick($event)">
+<div class="parent-container" [ngClass]="{ overlapped: isOverlapped, selected: isSelected, dragging, highlight: isHighlighted }" (mousedown)="onClick($event)">
   <p>{{ treeNode?.name }}</p>
 </div>
