--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -1,5 +1,7 @@
 $ptc-white: #fff;
+$ptc-black: #000;
 
+$ptc-very-light-grey: #efefef;
 $ptc-light-grey: #dcdcdc;
 $ptc-disabled-gray: #a3aabc;
 $ptc-dark-blueish-grey: #818a91;
@@ -13,3 +15,5 @@ $ptc-very-dark-blue: #001299;
 $ptc-ice-red: #F5ECE9;
 $ptc-medium-red: #e83e3e;
 $ptc-bug-red: #dc3545;
+
+$ptc-green: #25b289;
