--- a/frontend/src/app/components/my-node/my-node.scss
+++ b/frontend/src/app/components/my-node/my-node.scss
@@ -1,3 +1,5 @@
+@use 'src/variables.scss' as *;
+
 :host {
   position: absolute;
 }
@@ -8,15 +10,21 @@
   align-items: center;
   background-color: #fff;
   border-radius: 4px;
-  border: 1px solid #000000;
+  border: 1px solid $ptc-black;
   padding: 0 8px;
+  cursor: grabbing;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
 
   &.overlapped {
-    background-color: #ccf;
+    background-color: $ptc-very-light-blue;
   }
 
   &.selected {
-    background-color: #cccccc;
+    background-color: $ptc-light-grey;
+  }
+
+  &.highlight {
+    background-color: $ptc-green;
   }
 
   &.dragging {
