add, edit works

--- a/frontend/src/app/components/my-node-tree/my-node-tree.html
+++ b/frontend/src/app/components/my-node-tree/my-node-tree.html
@@ -3,6 +3,7 @@
     <app-my-node #treeNodeRef
                  [treeNode]="node"
                  [isSelected]="node === selectedNode()"
+                 [isHighlighted]="isFiltered(node)"
                  (mousedown)="startDrag($event, node)">
     </app-my-node>
   }
