--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -8,9 +8,9 @@
     {{ selectedNode()?.content ?? 'Select a node to see its content' }}
   </div>
   <footer>
-    <button class="j-common-button" (click)="addTreeNode()">Add</button>
-    <button class="j-common-button" (click)="editTreeNode()">Edit</button>
-    <button class="j-common-button red" (click)="deleteTreeNode()">Delete</button>
+    <button class="j-common-button" (click)="addTreeNode()" [disabled]="!selectedNode()">Add</button>
+    <button class="j-common-button" (click)="editTreeNode()" [disabled]="!selectedNode()">Edit</button>
+    <button class="j-common-button red" (click)="deleteTreeNode()" [disabled]="!selectedNode()">Delete</button>
     <div class="search-container">
       <input class="j-common-input" placeholder="Node content" #filter/>
       <button class="j-common-button border-only" (click)="search(filter.value)">Search</button>
