--- a/frontend/src/app/components/my-node/my-node.scss
+++ b/frontend/src/app/components/my-node/my-node.scss
@@ -27,6 +27,10 @@
     background-color: $ptc-green;
   }
 
+  &.halfhighlighted {
+    background-color: $ptc-disabled-gray;
+  }
+
   &.dragging {
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   }
