--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: minmax(100px, 300px) 1fr;
+  grid-template-columns: minmax(100px, 25%) 1fr;
   grid-template-rows: 1fr 80px;
 
   footer {
@@ -33,6 +33,7 @@
   .tree-container {
     background-color: $ptc-very-light-grey;
     position: relative;
+    overflow: hidden;
   }
 
   .content-container {
