--- a/frontend/src/app/components/my-node-tree/my-node-tree.html
+++ b/frontend/src/app/components/my-node-tree/my-node-tree.html
@@ -1,5 +1,5 @@
 @if (nodes()?.length) {
-  @for (node of nodes(); track $index) {
+  @for (node of nodes(); track node.id) {
     <app-my-node #treeNodeRef
                  [treeNode]="node"
                  [isSelected]="node === selectedNode()"
