draw lines in my-node-tree

--- a/frontend/src/app/components/my-node-tree/my-node-tree.html
+++ b/frontend/src/app/components/my-node-tree/my-node-tree.html
@@ -1,4 +1,5 @@
 @if (nodes()?.length) {
+  <canvas #canvas class="node-tree-canvas"></canvas>
   @for (node of nodes(); track node.id) {
     <app-my-node #treeNodeRef
                  [treeNode]="node"
