--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: minmax(100px, 25%) 1fr;
+  grid-template-columns: 500px 1fr;
   grid-template-rows: 1fr 80px;
 
   footer {
